static/css/s2.css
body {
  padding: 0;
  margin: 0;
  overflow: hidden;
  -webkit-text-size-adjust: 100%;
}
*::selection {
  background-color: #D2DCFF;
}
body.sepia {
  background-color: #F9F9F7;
}
body.dark {
  background-color: #333331; 
}
#sefaria {
  text-align: center;
}
#s2 {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
  z-index: 1000;
}
#s2.headerOnly {
  z-index: 1000;
  height: 54px;
  overflow: hidden;
}
.readerApp {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
}
.headerInner {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 54px;
  background: white;
  z-index: 1001;
  border-bottom: 1px solid #999;
  box-sizing: border-box;
}
.headerInner {
  line-height: 54px;
  padding: 0px 30px;
  text-align: center;
  height: 54px;
  overflow: hidden;
}
.header .left {
  float: left;
  text-align: left;
  height: 54px;
  overflow: hidden;
}
.header .right {
  float: right;
  text-align: right;
}
.header .library, .header .home, .header .account, .header .readerNavMenuSearchButton {
  cursor: pointer;
}
.header .library, .header .account, .header .readerNavMenuSearchButton {
  display: inline-block;
  color: #999;
}
.header .searchBox {
  overflow: hidden;
  display: block;
  padding: 0;
  text-align: left;
}
.header .search {
  outline: none;
  border: none;
  box-shadow: none;
  color: black;
  font-size:  18px;
  font-family: "adobe-garamond-pro", Georgia, serif;
  vertical-align: 1px;
  width: 90%;
  margin: 0;
}
.header .home {
  display: inline-block;
}
.header .home img {
  opacity: 0.6;
}
.header .library, .header .account {
  margin: 0px 17px;
  font-size: 24px;
}
.header .account img {
  height: 24px;
  width: 24px;
  opacity: 0.4;
  vertical-align: -3px;
}
.header .readerNavMenuSearchButton {
  margin: 0 8px 0 6px;
  font-size: 17px;
  position: relative;
  top: -2px;
}
.header .home img {
  height: 28px;
  vertical-align: middle;
  margin-top: -9px;
}
.header .headerNavContent {
  position: fixed;
  height: 100%;
  width: 100%;
  box-sizing: border-box;
  top: 0;
  padding-top: 54px;
  z-index: 1000;
}
.ui-autocomplete {
  position: absolute;
  background: white;
  list-style-type: none;
  padding: 6px 0;
  border: 1px solid #aaa;
  border-top: 1px solid #ddd;
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.ui-autocomplete .ui-menu-item a {
  padding: 4px 12px;
  font-size: 16px;
  color: black;
  cursor: pointer;
  display: block;
}
.ui-autocomplete .ui-menu-item a.ui-state-focus {
  background-color: #E9E9E7;
}
.ui-helper-hidden-accessible {
  display: none;
}
.multiPanel .readerPanelBox {
  box-sizing: border-box;
  margin-top: 54px;
}
.readerPanelBox {
  position: absolute;
  height: 100%;
  width: 100%;
}
.multiPanel .readerPanelBox {
  box-sizing: border-box;
  margin-top: 54px;
}
.readerPanelBox + .readerPanelBox {
  border-left: 1px solid #ddd;
}
.readerPanel {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: inherit;
  font-family: "adobe-garamond-pro", Georgia, serif;
}
.readerContent {
  width: 100%;
  height: 100%;
  background-color: inherit;
}
.dark .readerContent {
  color: white;
}
.textColumn {
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
  position: relative;
  padding: 0px 0 50%;
  box-sizing: border-box;
  background-color: inherit;
}
/* Adjusting for 17px scrollbars, to keep content centered */
.english .textColumn, .bilingual .textColumn {
  padding-left: 17px;
}
.hebrew .textColumn {
  padding-right: 17px;
}
.wideColumn .textColumn {
  padding: 0 25px 50% 42px;
}
.wideColumn .hebrew .textColumn {
  padding: 0 42px 50% 25px;
}
.textColumn .loadingMessage.base {
  margin: 30px 0;
  color: #999;
  text-align: center;
  font-weight: lighter;
  font-style: normal;
  font-family: "proxima-nova", "Helvetica Neue", Helvetica, sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
  /*border-bottom: 4px solid #E6E5E6;*/
  padding: 0 6px 3px;
}
.textColumn .loadingMessage.base.prev {
  margin: 70px 0 30px;
}
.textColumn .loadingMessage.base.next {
  margin: 30px 0 70px;
}
.textColumn .loadingMessage.base.next.final {
}
.readerPanel .he,
.readerPanel .heOnly {
  font-family: "Taamey Frank", "Times New Roman", serif;
  direction: rtl;
  text-align: right;
}
.he, .heOnly .en {
  font-size: 120%;
}
.readerPanel.hebrew {
  direction: rtl;
}
.readerPanel.english .he {
  display: none;
}
.readerPanel.english .en {
  display: inline;
}
.readerPanel.hebrew .he {
  display: inline;
  text-align: right;
}
.readerPanel.hebrew .he .enInHe {
  font-size: 83%;
}
.readerPanel.hebrew .en {
  display: none;
}
body .bilingual .heOnly .en,
body .bilingual .enOnly .he {
  display: none;
}
.languageToggle {
  display: inline;
}
.loadingMessage {
  font-size: 14px;
  font-style: italic;
}
.bilingual .loadingMessage .he {
  display: none;
}
.headroom {
  transition: transform 200ms linear;
  -webkit-transition: 200ms linear;
  transition-property: transform;
}
.headroom--pinned {
  transform: translateY(0%);
  -webkit-transform: translateY(0%);
}
.headroom--unpinned {
  transform: translateY(-100%);
  -webkit-transform: translateY(-100%);
}
.headroomOff.headroom--unpinned {
  transform: translateY(0%);
  -webkit-transform: translateY(0%);
}
.readerPanel.light {
  background-color: white;
}
.readerPanel.sepia {
  background-color: #f7f7f7;
}
.readerPanel.dark {
  background-color: #333331;
}
.readerNavMenu {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  z-index: 101;
  background-color: #F9F9F7;
}
.readerNavMenu .content {
  box-sizing: border-box;
  padding: 80px 10px 10px;
  height: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
  font-size: 14px;
}
.multiPanel .readerNavMenu .content {
  padding: 80px 25px 10px;
}
/* ... */

